Fixed tag wrapping

--- a/styles.css
+++ b/styles.css
@@ -198,6 +198,7 @@ ul {
     margin: 0px;
     padding: 8px 0px 0px 0px;
     display: flex;
+    flex-wrap: wrap;
 }
 
 .tag {
